# algo_trading

./: .env.example  .gitignore  README.md  docker-compose.yml
dagster_project/: pyproject.toml
dagster_project/src/dataops_dagster/: definitions.py  definitions_class.py  utils.py
dagster_project/src/dataops_dagster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dagster_project/src/dataops_dagster/defs/: bronze.py  bronze_class.py  dbt_assets.py  dbt_assets_class.py  silver.py  silver_class.py
kedro_project/: pyproject.toml
kedro_project/.viz/: kedro_pipeline_events.json  stats.json
kedro_project/conf/base/: catalog.yml  logging.yml  parameters.yml  parameters_data_preprocessing.yml  parameters_machine_learning.yml
kedro_project/docs/: stock_close_oop_and_data_diagrams.md
kedro_project/src/mlops_kedro/: pipeline_registry.py  pipeline_registry_class.py  settings.py
kedro_project/src/mlops_kedro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kedro_project/src/mlops_kedro/datasets/: __init__.py  pickle_dataset.py
kedro_project/src/mlops_kedro/pipelines/stock_close_training/: config_resolvers.py  config_resolvers_class.py  feature_engineering.py  feature_engineering_oop.py  model_matrix.py  model_matrix_class.py  node_utils.py  node_utils_class.py  nodes.py  nodes_data.py  nodes_data_class.py  nodes_models.py  nodes_models_class.py  pipeline.py  pipeline_class.py
kedro_project/src/mlops_kedro/pipelines/stock_close_training/features/: __init__.py  conditions.py  conditions_class.py  conventional_gap_pipeline.py  feature_sets.py  source.py  (+11 more)
(+235 files in other folders)
