[project]
name = "mlops-kedro"
version = "0.1.0"
requires-python = ">=3.12"

[tool.kedro]
package_name = "mlops_kedro"
project_name = "MLOps Kedro"
kedro_init_version = "1.5.0"
source_dir = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.kedro_telemetry]
project_id = "70f60c538907419c97267758a1f03a9e"
